--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.12.0",
     "axios": "^1.6.8",
-    "chakra-ui-simple-autocomplete": "^2.2.0",
+    "chakra-ui-simple-autocomplete": "^2.3.0",
     "framer-motion": "^7.10.2",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.12.0",
     "react-multi-carousel": "^2.8.2",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
